--- a/BusinessLib/baselib/build.gradle
+++ b/BusinessLib/baselib/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'org.greenrobot.greendao'
 apply from: '../../global_config.gradle'
 android {
 
@@ -20,4 +21,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':ToolLib:zlibrary')
+    //数据库ORM框架
+    compile 'org.greenrobot:greendao:3.2.0'
+
 }
