--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':BusinessLib:baselib')
-    compile 'com.jakewharton:butterknife:8.4.0'
+    compile project(':BusinessLib:cash')
+    compile project(':BusinessLib:member')
+    compile project(':BusinessLib:coupon')
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
 
 
 }
