--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':ToolLib:zlibrary', ':BusinessLib:baselib', ":ToolLib:toasty", ":ToolLib:bottom-bar"
+include ':app', ':ToolLib:zlibrary', ':BusinessLib:baselib', ':BusinessLib:cash',':BusinessLib:coupon', ':BusinessLib:member',":ToolLib:toasty", ":ToolLib:bottom-bar"
