--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         classpath 'com.antfortune.freeline:gradle:0.8.5'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
