--- a/BusinessLib/cash/build.gradle
+++ b/BusinessLib/cash/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.library'
 apply from: '../../global_config.gradle'
-
+apply plugin: 'com.jakewharton.butterknife'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
+    }
+}
 android {
 
 
@@ -23,5 +31,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':BusinessLib:baselib')
-    compile 'com.android.support:appcompat-v7:25.1.1'
 }
