--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':ToolLib:zlibrary', ':BusinessLib:baselib', ':BusinessLib:cash',':BusinessLib:coupon', ':BusinessLib:member',":ToolLib:toasty", ":ToolLib:bottom-bar"
+include ':app', ':ToolLib:zlibrary', ':BusinessLib:baselib', ':BusinessLib:cash', ':BusinessLib:coupon', ':BusinessLib:member', ':sencond', ":ToolLib:toasty", ":ToolLib:bottom-bar"
+include ':ToolLib:chipview'
