--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,6 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.parallel=true
+VERSION_NAME_PREFIX=1.0.0
+VERSION_NAME_SUFFIX=
 
