--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ ext {
     POM_DEVELOPER_ID = "zhoujunyou"
     POM_DEVELOPER_NAME = "zhoujunyou."
 
-    BINTRAY_ORGANIZATION = "zhoujunyou"
+    BINTRAY_ORGANIZATION = "zhoujunyou2b"
 
 }
 
