--- a/BusinessLib/cash/build.gradle
+++ b/BusinessLib/cash/build.gradle
@@ -15,8 +15,13 @@ android {
     defaultConfig {
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
+
 
     }
     buildTypes {
@@ -32,4 +37,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':BusinessLib:baselib')
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.0.4'
+
 }
