--- a/BusinessLib/coupon/build.gradle
+++ b/BusinessLib/coupon/build.gradle
@@ -5,8 +5,12 @@ android {
     defaultConfig {
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
 
     }
     buildTypes {
@@ -22,5 +26,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':BusinessLib:baselib')
 
-    compile 'com.android.support:appcompat-v7:25.1.1'
 }
