--- a/BusinessLib/member/build.gradle
+++ b/BusinessLib/member/build.gradle
@@ -8,8 +8,12 @@ android {
 
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
 
     }
     buildTypes {
@@ -24,5 +28,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':BusinessLib:baselib')
-    compile 'com.android.support:appcompat-v7:25.1.1'
 }
