--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,11 @@ android {
         versionCode 2
         versionName "1.1"
         multiDexEnabled true
-
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
     }
 
 
@@ -39,6 +43,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+
+
+
     lintOptions {
         abortOnError false
     }
@@ -52,4 +59,5 @@ dependencies {
     compile project(':BusinessLib:member')
     compile project(':BusinessLib:coupon')
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.0.4'
 }
