--- a/BusinessLib/baselib/build.gradle
+++ b/BusinessLib/baselib/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile project(':ToolLib:zlibrary')
     //数据库ORM框架
     compile 'org.greenrobot:greendao:3.2.0'
-
+    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
 }
