chang to rxjava2

--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,13 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+subprojects {
+    task allDeps(type: DependencyReportTask) {}
+}
+
 ext {
     supportLibraryVersion = "25.3.0"
-    retrofitLibraryVersion = "2.1.0"
+    retrofitLibraryVersion = "2.2.0"
     GROUP = 'com.zhoujunyou'
     VERSION_NAME = "${VERSION_NAME_PREFIX}${VERSION_NAME_SUFFIX}"
 
