--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
 include ':app', ':ToolLib:zlibrary', ':BusinessLib:baselib', ':BusinessLib:cash', ':BusinessLib:coupon', ':BusinessLib:member', ":ToolLib:toasty", ":ToolLib:bottom-bar"
 include ':ToolLib:chipview'
+//include ':sencond'
