--- a/sencond/build.gradle
+++ b/sencond/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile project(':ToolLib:bottom-bar')
     compile project(':ToolLib:zlibrary')
     compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
