--- a/sencond/src/main/AndroidManifest.xml
+++ b/sencond/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.testapp">
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,13 +20,10 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".ShutdownBroadcastReceiver" >
-            <intent-filter >
-                <action android:name="android.intent.action.ACTION_SHUTDOWN" />
 
-                <category android:name="android.intent.category.HOME" />
-            </intent-filter>
-        </receiver>
+
+        <activity android:name=".TrafficMonitorActivity">
+        </activity>
     </application>
 
 </manifest>
