--- a/BusinessLib/baselib/build.gradle
+++ b/BusinessLib/baselib/build.gradle
@@ -2,12 +2,19 @@ apply plugin: 'com.android.library'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.jakewharton.butterknife'
 apply from: '../../global_config.gradle'
+
+
 android {
 
 
     defaultConfig {
         versionCode 1
         versionName "1.0"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
 
 
     }
@@ -33,6 +40,9 @@ dependencies {
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
     compile 'com.facebook.stetho:stetho:1.4.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.0.4'
+
+
 
 
 }
