--- a/BusinessLib/cash/src/main/AndroidManifest.xml
+++ b/BusinessLib/cash/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".business.cash.CashActivity">
+        <activity android:name=".business.cash.CashRouteActivity">
         </activity>
         <activity android:name=".business.orders.OrdersActivity">
         </activity>
