--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,13 @@ buildscript {
 
 allprojects {
     repositories {
+
         jcenter()
 
         maven {
             url "https://jitpack.io"
         }
+        mavenLocal()
 
     }
 }
