--- a/sencond/build.gradle
+++ b/sencond/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     compile project(':ToolLib:toasty')
     compile project(':ToolLib:bottom-bar')
     compile project(':ToolLib:zlibrary')
-    compile 'com.android.support.constraint:constraint-layout:+'
     compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.github.zhoujunyou:deviceInfo:1.0.5'
 }
