--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':app', ':ToolLib:zlibrary', ':BusinessLib:baselib', ':BusinessLib:cash', ':BusinessLib:coupon', ':BusinessLib:member', ":ToolLib:toasty", ":ToolLib:bottom-bar"
 include ':ToolLib:chipview'
 include ':sencond'
+include ':ToolLib:qrcodereaderview'
 
