--- a/BusinessLib/coupon/build.gradle
+++ b/BusinessLib/coupon/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.library'
-apply from: '../../global_config.gradle'
+apply from: rootProject.file('global_config.gradle')
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
+
+
     defaultConfig {
         versionCode 1
         versionName "1.0"
@@ -12,6 +15,7 @@ android {
             }
         }
 
+
     }
     buildTypes {
         release {
@@ -19,11 +23,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '25.0.2'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':BusinessLib:baselib')
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:'+rootProject.ext.arouterCompilerVersion
 
 }
