--- a/ToolLib/qrcodereaderview/build.gradle
+++ b/ToolLib/qrcodereaderview/build.gradle
@@ -1,26 +1,39 @@
 apply plugin: 'com.android.library'
-apply from: '../../global_config.gradle'
+apply from: rootProject.file('global_config.gradle')
+apply plugin: 'maven'
 
 
 android {
-  buildTypes {
-    debug {
-      testCoverageEnabled true
+    buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
     }
-  }
 
-  defaultConfig {
-    versionCode 1
-    versionName "1.0"
+    defaultConfig {
+        versionCode 1
+        versionName "1.0"
 
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-  buildToolsVersion '25.0.2'
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    buildToolsVersion '25.0.2'
 }
 
 dependencies {
-  compile 'com.google.zxing:core:3.2.1'
-  compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportLibraryVersion
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.android.support:appcompat-v7:' + rootProject.ext.supportLibraryVersion
+}
+task installLocal(type: Upload) {
+    description "Installs the artifacts to the local Maven repository."
+    configuration = configurations['archives']
+    repositories {
+        mavenDeployer {
+            pom.version = "0.0.1-SNAPSHOT"
+            pom.artifactId = "qrcodereadrview"
+            pom.groupId = "com.github.zhoujunyou"
+            repository url: "file://${System.properties['user.home']}/.m2/repository"
+        }
+    }
 }
 
 
